--- a/public/index.html
+++ b/public/index.html
@@ -68,8 +68,7 @@
       type(); // start typing
     });
   </script>
-<!-- modal styling -->
-  <style>
+<style>
     .modal-content {
       border-radius: 1rem;
       overflow: hidden;
@@ -382,11 +381,9 @@
         </div>
       </div>
     </div>
-    </section>
-
-    <!-- MAIN SECTION -->
-
-    <section class="hero d-flex align-items-center bg-gradient text-dark" id="home"
+  </div>
+  <!-- MAIN SECTION -->
+  <section class="hero d-flex align-items-center bg-gradient text-dark" id="home"
       style="padding-top: 120px; padding-bottom: 40px;">
       <div class="container">
         <div class="row align-items-center">
@@ -473,8 +470,6 @@
       </div>
     </div>
 
-    <!-- OUR MISSION -->
-
     <section class="py-5 bg-info bg-opacity-10 text-dark" id="mission-section">
       <div class="container">
         <div class="row align-items-center">
@@ -499,8 +494,6 @@
         </div>
       </div>
     </section>
-
-    <!-- MEET THE DEVELOPERS -->
 
     <section class="bg-light py-5 text-dark" id="team-section">
       <div class="container text-center">
