--- a/public/admin-abkd.html
+++ b/public/admin-abkd.html
@@ -56,6 +56,16 @@
             $scope.fetchUsers();
           });
       };
+      $scope.deleteUser = function (emailid) {
+        if (confirm("Are you sure you want to delete this user?")) {
+          $http.get("/delete-user?emailid=" + emailid)
+            .then(function (response) {
+              alert(response.data);
+              $scope.fetchUsers();
+            });
+        }
+      };
+
 
       $scope.fetchUsers(); // Load on page start
     });
@@ -91,6 +101,9 @@
             <!-- Action icons -->
             <i class="fas fa-ban text-danger" title="Block" ng-click="changeStatus(user.emailid, 0)"></i>
             <i class="fas fa-check-circle text-success" title="Resume" ng-click="changeStatus(user.emailid, 1)"></i>
+
+            <i class="btn btn-sm btn-outline-danger" title="Delete" ng-click="deleteUser(user.emailid)">>/i>
+          </td>
           </td>
           </td>
         </tr>
