--- a/public/admin-abkd.html
+++ b/public/admin-abkd.html
@@ -101,8 +101,7 @@
             <!-- Action icons -->
             <i class="fas fa-ban text-danger" title="Block" ng-click="changeStatus(user.emailid, 0)"></i>
             <i class="fas fa-check-circle text-success" title="Resume" ng-click="changeStatus(user.emailid, 1)"></i>
-
-            <i class="btn btn-sm btn-outline-danger" title="Delete" ng-click="deleteUser(user.emailid)">>/i>
+            <i class="btn btn-outline-danger" title="Delete" ng-click="deleteUser(user.emailid)">Delete</i>
           </td>
           </td>
           </td>
