changes in admin-abkd.html

--- a/public/dash-admin.html
+++ b/public/dash-admin.html
@@ -72,7 +72,7 @@
             <h5 class="card-title">User Console</h5>
             <p class="card-text">Manage user accounts, including blocking or resuming access, to maintain community
               standards.</p>
-            <a href="/admin-users-console.html" class="btn btn-danger mt-auto">Manage Users</a>
+            <a href="/admin-abkd.html" class="btn btn-danger mt-auto">Manage Users</a>
           </div>
         </div>
       </div>
